--- a/templates/files.html
+++ b/templates/files.html
@@ -1,20 +1,36 @@
-<html>
+{% extends 'header.html' %}
 
-<head>
-    <meta charset="utf-8">
-</head>
-    <body>
-<ul>
+{% block head %}
+
+
+<title>Housing Estimator</title>
+{% endblock %}
+
+{% block content %}
+
 
     
-    {% for file in files %}
-    <li>
-        <a href="/artifact/{{file}}">
-            {{  file }}
-        </a>
-    </li>
-    {% endfor %}
-</ul>
-</body>
+{% if "housing" in result['parent_folder'] %}
+<a href="/artifact/{{result['parent_folder']}}"><i class="fa fa-arrow-left" aria-hidden="true"></i>Back</a>
 
-</html>
+<h4 style="text-align:center;">
+{{result['parent_label']}}
+</h4>
+    {% endif %}
+
+<div class="row">
+    {% for href,label in result["files"].items() %}
+    <div class="col-md-2">
+        <a href="/artifact/{{href}}" style="text-decoration: none;">
+
+            <i class="fa {% if '.' in label %} fa-file {% else %} fa-folder {% endif %} fa-8x" aria-hidden="true"></i> <br>{{ label }}
+            {% if '.' in label %}
+        <i class="fa fa-download" aria-hidden="true"></i>
+        {% endif %}
+    </a>
+    </div>
+    {% endfor %}
+   
+</div>
+
+    {% endblock %}
