--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,24 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-    </head>
 
-    <body>
-    <a href="/logs">Check logs</a>
-    <a href="/artifact">Check artifacts</a>
-    <a href="/saved_models">Saved Models</a>
-    <a href="/predict">Prediction Page</a>
-    </body>
+  
+{% extends 'header.html' %}
 
-</html>
+{% block head %}
+
+      
+<title>Index</title>
+{% endblock %}
+
+{% block content %}
+
+<br>
+<br>
+<br>
+    <a href="/logs">Check logs</a>  
+    <a href="/artifact">Check artifacts</a>  
+    <a href="/saved_models">Saved Models</a>  
+    Estimate Housing median value in California <a href="/predict">Click Here!!</a>  
+    Create a model California housing cost estimator.<a href="/train">Click Here!!</a>
+    
+    
+    {% endblock %}
+
