--- a/templates/saved_models_files.html
+++ b/templates/saved_models_files.html
@@ -1,19 +1,37 @@
-<html>
+{% extends 'header.html' %}
 
-<head>
-    <meta charset="utf-8">
-    <title>Saved model</title>
-</head>
-    <body>
-<ul>
-    {% for file in files %}
-    <li>
-        <a href="/saved_models/{{ file }}">
-            {{  file }}
+{% block head %}
+
+
+<title>Model List</title>
+{% endblock %}
+
+{% block content %}
+
+
+
+    
+    {% if "saved_models" in result['parent_folder'] %}
+    <a href="/saved_models/{{result['parent_folder']}}"><i class="fa fa-arrow-left" aria-hidden="true"></i>Back</a>
+    
+    <h4 style="text-align:center;">
+    {{result['parent_label']}}
+    </h4>
+        {% endif %}
+
+    <div class="row">
+        {% for href,label in result["files"].items() %}
+        <div class="col-md-2">
+            <a href="/saved_models/{{href}}" style="text-decoration: none;">
+
+                <i class="fa {% if '.' in label %} fa-file {% else %} fa-folder {% endif %} fa-8x" aria-hidden="true"></i> <br>{{ label }}
+                {% if '.' in label %}
+            <i class="fa fa-download" aria-hidden="true"></i>
+            {% endif %}
         </a>
-    </li>
-    {% endfor %}
-</ul>
-</body>
+        </div>
+        {% endfor %}
+       
+    </div>
 
-</html>
+{% endblock %}
