--- a/templates/files.html
+++ b/templates/files.html
@@ -20,7 +20,7 @@
 
 <div class="row">
     {% for href,label in result["files"].items() %}
-    <div class="col-md-2">
+    <div class="col-md-2 text-center">
         <a href="/artifact/{{href}}" style="text-decoration: none;">
 
             <i class="fa {% if '.' in label %} fa-file {% else %} fa-folder {% endif %} fa-8x" aria-hidden="true"></i> <br>{{ label }}
