--- a/templates/header.html
+++ b/templates/header.html
@@ -64,7 +64,7 @@
 
 
 
-    <div class="row">
+    <div class="row" style="margin-left: 5%;margin-right:5%;">
        
         <div class="col-md-2 col-sm-12 col-lg-2">
             <ul class=" list-group ">
