--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,28 @@
 {% block content %}
 
 <div class="row">
+    <div class="col-md-12 col-lg-12 col-sm-12"  style="margin-bottom:20px;">
+        <div class="row">
+            <div class="col-md-8">
+        <div class="card">
+            <div class="card-header">
+                Want to learn project like this.
+            </div>
+            <div class="card-body">
+        
+                <h5 class="card-title">Check Full stack data science at iNeuron portal.</h5>
+                <p class="card-text">Full-stack data science course is a live mentor-led job guaranteed certification program with a full-time one-year internship provided by iNeuron, in this course you will learn the entire stack required to work in the data science, data analytics, and big data domain, including machine learning, deep learning, computer vision NLP and Big data including MLOps and cloud infrastructure, along with real-time industry projects and product development with the iNeuron product development team, which will enable you to contribute on various levels.</p>
+                <a class="btn btn-success" target="_blank" href="https://courses.ineuron.ai/Full-Stack-Data-Science-Bootcamp?campaign=affiliate&coupon_code=FZYHXMNX">Check Course</a>
+            </div>
+        </div>
+        </div>
+        <div class="col-md-4">
+            <iframe  style = "width:100%;height:100%" src="https://www.youtube.com/embed/42IQIKMSukY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+
+        </div>
+        </div>
 <div class="col-md-4 col-lg-4 col-sm-12">
 <div class="card">
     <div class="card-header">
@@ -82,8 +104,12 @@
                 </div>
             </div>
             </div>
-    
+        
 
+
+
+
+            
 </div>
 
 {% endblock %}
