--- a/templates/training_log.html
+++ b/templates/training_log.html
@@ -29,7 +29,7 @@ width:100%;
 </style>
 <script>
     $(document).ready(function(){
-       var training_socket=io.connect("https://california-housing-prediction.herokuapp.com/");           //console.log(training_socket)
+       var training_socket=io.connect("wss://california-housing-prediction.herokuapp.com/");           //console.log(training_socket)
       
        training_socket.emit('get_log_details');
        training_socket.on('log_message',function(msg){
